@@ -1,3 +1,8 @@
+2016-03-07  Florian Weimer  <fweimer@redhat.com>
+
+	[BZ #19648]
+	* test-skeleton.c (main): Do not set RLIMIT_DATA.
+
 2016-03-07  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
 	[BZ #14750]
